--- a/index.html
+++ b/index.html
@@ -5,8 +5,57 @@
 
   <link rel="stylesheet" type="text/css" href="naturalize.css">
   <link rel="stylesheet" type="text/css" href="main.css">
+
 </head>
 <body>
+
+<header class="orange">
+  <ul>
+    <li><span>FREE SHIPPING!</span></li>
+    <li>Plus Spring Savings:</li>
+    <li>$10 off $50 order!</li>
+    <li>$20 off $100 order!</li>
+    <li>$30 off $150 order!</li>
+
+  </ul>
+</header>
+<div class="one">
+  <div class="logo"><img src="images/logo-stack@2x.png"></div>
+
+  <div class="links">
+      <ul>
+        <li>Collection</li>
+        <li>Color</li>
+        <li>Width</li>
+        <li>Fabric</li>
+        <li>Pattern</li>
+      </ul>
+  </div>
+
+  <div class="form">
+    <ul>
+      <li>SIGN IN</li>
+      <li>REGISTER</li>
+    </ul>
+
+    <ul>
+      <li>
+        <form class="signin" method="get" action="#">
+          <input>
+
+        </form>
+      </li>
+
+      <li>
+        <form class="register" method="get" action="#">
+          <input>
+      
+        </form>
+      </li>
+
+    </ul>
+  </div>
+</div>
 
 </body>
 </html>
