Added image border to .one. Cleaned up some of the positioning of .one. Added little grey arrows. Added the outlined .cart button.

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
       <li>REGISTER</li>
     </ul>
 
+    <ul class="cart">
+      <li class="cart-pic"><img src="sprite@2x.png"></li>
+      <li>Cart</li>
+      <li class="point"><img src="sprite@2x.png"></li>
+
+    </ul>
+
     <ul>
       <li>
-        <form class="signin" method="get" action="#">
-          <input>
-
-        </form>
-      </li>
-
-      <li>
-        <form class="register" method="get" action="#">
+        <form class="register" method="get" action="#" placeholder="Search">
           <input>
       
         </form>
