Added next section for three images with text. Updated top cart area. Changed font sizes to tie list image. Change tie list image div to look more closely like the original.

--- a/index.html
+++ b/index.html
@@ -33,28 +33,91 @@
   </div>
 
   <div class="form">
-    <ul>
-      <li>SIGN IN</li>
-      <li>REGISTER</li>
-    </ul>
+    <div class="form-text">
+        <p>SIGN IN</p>
+        <p>REGISTER</p>
+    </div>
+    <div class="form-two">
+      <div class="form-two-cart">
+        <div class="form-two-cart-pic"><img src="images/sprite@2x.png"></div>
+          <p>Cart</p>
+        <div></div>
+      </div>
 
-    <ul class="cart">
-      <li class="cart-pic"><img src="sprite@2x.png"></li>
-      <li>Cart</li>
-      <li class="point"><img src="sprite@2x.png"></li>
-
-    </ul>
-
-    <ul>
-      <li>
-        <form class="register" method="get" action="#" placeholder="Search">
-          <input>
-      
+      <div class="form-two-search">
+        <form class="register" method="get" action="#">
+          <input class"form-two-search-input" placeholder="Search">
         </form>
-      </li>
+      </div>
+    </div>
 
-    </ul>
   </div>
+</div>
+<div class="ties">
+  <ul class="ties-full">
+    <ul>
+      <li><img src="images/black@1.5x.jpg"></li>
+      <li class="ties-full-text">Black</li>
+    </ul>
+    <ul>
+      <li><img src="images/blue@1.5x.jpg"></li>
+      <li class="ties-full-text">Blue</li>
+    </ul>
+    <ul>
+      <li><img src="images/collegiate@1.5x.jpg"></li>
+      <li class="ties-full-text">Collegiate</li>
+    </ul>
+    <ul>
+      <li><img src="images/cotton@1.5x.jpg"></li>
+      <li class="ties-full-text">Cotton</li>
+    </ul>
+    <ul>
+      <li><img src="images/favorites@1.5x.jpg"></li>
+      <li class="ties-full-text">Favorites</li>
+    </ul>
+    <ul>
+      <li><img src="images/graphic@1.5x.jpg"></li>
+      <li class="ties-full-text">Graphic</li>
+    </ul>
+    <ul>
+      <li><img src="images/plaid@1.5x.jpg"></li>
+      <li class="ties-full-text">Plaid</li>
+    </ul>
+    <ul>
+      <li><img src="images/silk@1.5x.jpg"></li>
+      <li class="ties-full-text">Silk</li>
+    </ul>
+    <ul>
+      <li><img src="images/striped@1.5x.jpg"></li>
+      <li class="ties-full-text">Striped</li>
+    </ul>
+
+    <p>Start dressing better.</p>
+
+  </ul>
+</div>
+<div class="three">
+  <div class="three-bow">
+    <img src="images/bow-ties.jpg">
+    <p>Bow Ties</p>
+  </div>
+  <div class="three-pocket">
+    <img src="images/pocket-squares.jpg">
+    <p>Pocket Squares</p>
+  </div>
+  <div class="three-tie">
+    <img src="images/tie-bars.jpg">
+    <p>Tie Bars</p>
+  </div>
+  <div class="seperate-text">
+  <p><em>We started designing and selling neckties in 1971.</em></p>
+  <br>
+  <p><em>After 44 years, we're still family-owned and operated.</em></p>
+  <br>
+  <a href="#">VIEW OUR STORY</a>
+
+  </div>
+  
 </div>
 
 </body>
