Finished design on three image section. Added bottom border to tie list section.

--- a/index.html
+++ b/index.html
@@ -97,27 +97,27 @@
   </ul>
 </div>
 <div class="three">
-  <div class="three-bow">
-    <img src="images/bow-ties.jpg">
-    <p>Bow Ties</p>
-  </div>
-  <div class="three-pocket">
-    <img src="images/pocket-squares.jpg">
-    <p>Pocket Squares</p>
-  </div>
-  <div class="three-tie">
-    <img src="images/tie-bars.jpg">
-    <p>Tie Bars</p>
+  <div class="three-images">
+    <div class="three-images-bow">
+      <img src="images/bow-ties@1.5x.jpg">
+     <p>Bow Ties</p>
+    </div>
+    <div class="three-images-pocket">
+      <img src="images/pocket-squares@1.5x.jpg">
+      <p>Pocket<br> Squares</p>
+    </div>
+    <div class="three-images-tie">
+      <img src="images/tie-bars@1.5x.jpg">
+      <p>Tie Bars</p>
+    </div>
   </div>
   <div class="seperate-text">
-  <p><em>We started designing and selling neckties in 1971.</em></p>
-  <br>
-  <p><em>After 44 years, we're still family-owned and operated.</em></p>
-  <br>
-  <a href="#">VIEW OUR STORY</a>
+    <p><em>We started designing and selling neckties in 1971.
+    <br>
+    After 44 years, we're still family-owned and operated.</em></p>
+    <a href="#">VIEW OUR STORY</a>
 
   </div>
-  
 </div>
 
 </body>
