Had to resize all of the elements. Created them while zoomed in which drastically change the layout. Also removed unneed code.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
   <div class="links">
       <ul>
-        <li>Collection</li>
-        <li>Color</li>
-        <li>Width</li>
-        <li>Fabric</li>
-        <li>Pattern</li>
+        <li class="trione">Collection</li>
+        <li class="tritwo">Color</li>
+        <li class="trithree">Width</li>
+        <li class="trifour">Fabric</li>
+        <li class="trifive">Pattern</li>
       </ul>
   </div>
 
@@ -39,7 +39,7 @@
     </div>
     <div class="form-two">
       <div class="form-two-cart">
-        <div class="form-two-cart-pic"><img src="images/sprite@2x.png"></div>
+        <div class="form-two-cart-pic"></div>
           <p>Cart</p>
         <div></div>
       </div>
@@ -118,6 +118,12 @@
     <a href="#">VIEW OUR STORY</a>
 
   </div>
+</div>
+<div class="four-columns">
+  <div class="column-one"></div>
+  <div class="column-two"></div>
+  <div class="column-three"></div>
+  <div class="column-four"></div>
 </div>
 
 </body>
