Finished creating search bar and cart label

--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
       <div class="form-two-cart">
         <div class="form-two-cart-pic"></div>
           <p>Cart</p>
-        <div></div>
+        <div class="form-two-zero"><p>0</p></div>
       </div>
 
       <div class="form-two-search">
         <form class="register" method="get" action="#">
           <input class"form-two-search-input" placeholder="Search">
         </form>
+        <div class="point"></div>
       </div>
     </div>
 
