Added four column section to page without top and bottom borders.

--- a/index.html
+++ b/index.html
@@ -121,10 +121,58 @@
   </div>
 </div>
 <div class="four-columns">
-  <div class="column-one"></div>
-  <div class="column-two"></div>
-  <div class="column-three"></div>
-  <div class="column-four"></div>
+  <div class="column-one">
+    <div class="column-one-header">
+      <h3>Weekly Pick</h2>
+    </div>
+    <div class="column-one-img">
+      <img src="images/plaid.jpg">
+    </div>
+    <div class="column-one-a">
+      <a href="#">2" Red, Blue, Gray, Yellow, and White Cotton Madras Skinny Tie</a>
+    </div>
+
+  </div>
+  <div class="column-two">
+    <div class="column-two-header">
+      <h3>Loop Us In</h2>
+    </div>
+    <div class="column-two-p">
+      <p>Tightly knotted or handing loose? Fitted suit or selvedge denim? Share your style with us.</p>
+    </div>
+    <div class="column-two-img">
+      <div class="facebook"></div>
+      <div class="pin"></div>
+      <div class="twitter"></div>
+    </div>
+  </div>
+  <div class="column-three">
+    <div class="column-three-header">
+      <h3>The Quarterly</h2>
+    </div>
+    <div class="column-three-p">
+      <p>Our newsletter is simple and brief for the hard-pressed gentlemen.</p>
+    </div>
+    <div class="column-three-input">
+      <form>
+        <input placeholder="name@example.com">
+      </form>
+    </div>
+    <div class="column-three-button">
+      <button>SUBSCRIBE ME</button>
+    </div>
+  </div>
+  <div class="column-four">
+    <div class="column-four-header">
+      <h3>Style Guide</h2>
+    </div>
+    <div class="column-four-img">
+      <img src="images/style-guide@1.5x.jpg">
+    </div>
+    <div class="column-four-p">
+      <p class="top-text">There are eighty-five ways to <a href="#">Knot a tie</a>. <br>We'll show you <a href="#">the essentials</a>.</p>
+    </div>
+  </div>
 </div>
 
 </body>
