Added bottom footer section and corrected a few issues with postioning throught the page.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   </ul>
 </header>
+
 <div class="one">
   <div class="logo"><img src="images/logo-stack@2x.png"></div>
 
@@ -54,6 +55,7 @@
 
   </div>
 </div>
+
 <div class="ties">
   <ul class="ties-full">
     <ul>
@@ -97,6 +99,7 @@
 
   </ul>
 </div>
+
 <div class="three">
   <div class="three-images">
     <div class="three-images-bow">
@@ -120,6 +123,7 @@
 
   </div>
 </div>
+
 <div class="four-columns">
   <div class="column-one">
     <div class="column-one-header">
@@ -172,6 +176,55 @@
     <div class="column-four-p">
       <p class="top-text">There are eighty-five ways to <a href="#">Knot a tie</a>. <br>We'll show you <a href="#">the essentials</a>.</p>
     </div>
+  </div>
+</div>
+
+<div class="footer">
+  <div class="col-one">
+    <ul>
+      <li class="list-head-one">Shop By</li>
+      <li>Collection</li>
+      <li>Color</li>
+      <li>Width</li>
+      <li>Fabric</li>
+      <li>Pattern</li>
+    </ul>
+  </div>
+  <div class="col-two">
+    <ul>
+      <li class="list-head-two">About Us</li>
+      <li>Our Story</li>
+      <li>Where To Buy</li>
+      <li>Wholesale</li>
+      <li>Offers</li>
+    </ul>
+  </div>
+  <div class="col-three">
+    <ul>
+      <li class="list-head-three">Style Guide</li>
+      <li>How To Wear</li>
+      <li>How To Tie</li>
+      <li>Blog</li>
+    </ul>
+  </div>
+   <div class="col-four">
+    <ul>
+      <li class="list-head-four">Help</li>
+      <li>Contact Us</li>
+      <li>Shipping Info</li>
+      <li>Returns</li>
+    </ul>
+  </div>
+  <div class="copyright">
+    <p>&copy; 2015 Skinny Ties. All Rights Reserved.    <span>Made by <a class="gravity" href="#">Gravity Department</a>.</span></p>
+  </div>
+  <div class="footer-box">
+    <p><span class="title-text">We're here for you.</span></p>
+    <br>
+    <p><span class="help-text">help@skinnyties.com</span>
+    <br>
+    <span class="numbers-text">877-687-8437</span></p>
+    <button>Contact Us</button>
   </div>
 </div>
 
