Fixed html validation issues and further corrected positioning issues within the page.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </header>
 
 <div class="one">
-  <div class="logo"><img src="images/logo-stack@2x.png"></div>
+  <div class="logo"><img src="images/logo-stack@2x.png" alt="logo"></div>
 
   <div class="links">
       <ul>
@@ -47,7 +47,7 @@
 
       <div class="form-two-search">
         <form class="register" method="get" action="#">
-          <input class"form-two-search-input" placeholder="Search">
+          <input class="form-two-search-input" placeholder="Search">
         </form>
         <div class="point"></div>
       </div>
@@ -57,61 +57,61 @@
 </div>
 
 <div class="ties">
-  <ul class="ties-full">
+  <div class="ties-full">
     <ul>
-      <li><img src="images/black@1.5x.jpg"></li>
+      <li><img src="images/black@1.5x.jpg" alt="blacktie"></li>
       <li class="ties-full-text">Black</li>
     </ul>
     <ul>
-      <li><img src="images/blue@1.5x.jpg"></li>
+      <li><img src="images/blue@1.5x.jpg" alt="bluetie"></li>
       <li class="ties-full-text">Blue</li>
     </ul>
     <ul>
-      <li><img src="images/collegiate@1.5x.jpg"></li>
+      <li><img src="images/collegiate@1.5x.jpg" alt="collegiatetie"></li>
       <li class="ties-full-text">Collegiate</li>
     </ul>
     <ul>
-      <li><img src="images/cotton@1.5x.jpg"></li>
+      <li><img src="images/cotton@1.5x.jpg" alt="cottontie"></li>
       <li class="ties-full-text">Cotton</li>
     </ul>
     <ul>
-      <li><img src="images/favorites@1.5x.jpg"></li>
+      <li><img src="images/favorites@1.5x.jpg" alt="favortietie"></li>
       <li class="ties-full-text">Favorites</li>
     </ul>
     <ul>
-      <li><img src="images/graphic@1.5x.jpg"></li>
+      <li><img src="images/graphic@1.5x.jpg" alt="graphictie"></li>
       <li class="ties-full-text">Graphic</li>
     </ul>
     <ul>
-      <li><img src="images/plaid@1.5x.jpg"></li>
+      <li><img src="images/plaid@1.5x.jpg" alt="plaidtie"></li>
       <li class="ties-full-text">Plaid</li>
     </ul>
     <ul>
-      <li><img src="images/silk@1.5x.jpg"></li>
+      <li><img src="images/silk@1.5x.jpg" alt="silktie"></li>
       <li class="ties-full-text">Silk</li>
     </ul>
     <ul>
-      <li><img src="images/striped@1.5x.jpg"></li>
+      <li><img src="images/striped@1.5x.jpg" alt="stripedtie"></li>
       <li class="ties-full-text">Striped</li>
     </ul>
 
     <p>Start dressing better.</p>
 
-  </ul>
+  </div>
 </div>
 
 <div class="three">
   <div class="three-images">
     <div class="three-images-bow">
-      <img src="images/bow-ties@1.5x.jpg">
+      <img src="images/bow-ties@1.5x.jpg" alt="bowtie">
      <p>Bow Ties</p>
     </div>
     <div class="three-images-pocket">
-      <img src="images/pocket-squares@1.5x.jpg">
+      <img src="images/pocket-squares@1.5x.jpg" alt="pocketsquares">
       <p>Pocket<br> Squares</p>
     </div>
     <div class="three-images-tie">
-      <img src="images/tie-bars@1.5x.jpg">
+      <img src="images/tie-bars@1.5x.jpg" alt="tiebar">
       <p>Tie Bars</p>
     </div>
   </div>
@@ -127,10 +127,10 @@
 <div class="four-columns">
   <div class="column-one">
     <div class="column-one-header">
-      <h3>Weekly Pick</h2>
+      <h3>Weekly Pick</h3>
     </div>
     <div class="column-one-img">
-      <img src="images/plaid.jpg">
+      <img src="images/plaid.jpg" alt="plaiddesign">
     </div>
     <div class="column-one-a">
       <a href="#">2" Red, Blue, Gray, Yellow, and White Cotton Madras Skinny Tie</a>
@@ -139,7 +139,7 @@
   </div>
   <div class="column-two">
     <div class="column-two-header">
-      <h3>Loop Us In</h2>
+      <h3>Loop Us In</h3>
     </div>
     <div class="column-two-p">
       <p>Tightly knotted or handing loose? Fitted suit or selvedge denim? Share your style with us.</p>
@@ -152,7 +152,7 @@
   </div>
   <div class="column-three">
     <div class="column-three-header">
-      <h3>The Quarterly</h2>
+      <h3>The Quarterly</h3>
     </div>
     <div class="column-three-p">
       <p>Our newsletter is simple and brief for the hard-pressed gentlemen.</p>
@@ -168,10 +168,10 @@
   </div>
   <div class="column-four">
     <div class="column-four-header">
-      <h3>Style Guide</h2>
+      <h3>Style Guide</h3>
     </div>
     <div class="column-four-img">
-      <img src="images/style-guide@1.5x.jpg">
+      <img src="images/style-guide@1.5x.jpg" alt="mandressedup">
     </div>
     <div class="column-four-p">
       <p class="top-text">There are eighty-five ways to <a href="#">Knot a tie</a>. <br>We'll show you <a href="#">the essentials</a>.</p>
