Changed font and corrected in issues that brought.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Skinny Ties</title>
 
   <link rel="stylesheet" type="text/css" href="naturalize.css">
+  <link href='https://fonts.googleapis.com/css?family=Exo:400,100,700,400italic,100italic' rel='stylesheet' type='text/css'>  
   <link rel="stylesheet" type="text/css" href="main.css">
 
 </head>
